[package]
name = "k8s-cri"
version = "0.6.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings Kubernetes CRI"
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "cri"]
repository = "https://github.com/kflansburg/k8s-cri"
documentation = "https://docs.rs/crate/k8s-cri"
readme = "README.md"

[dependencies]
tonic = { version = "0.8", features = ['tls'] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies.tonic-build]
version = "0.8"
default-features = false
features = ["prost", "transport"]

[dev-dependencies]
tokio = { version = "1.21", features = [ "rt-multi-thread" ] }
tower = "0.4"
