[package]
name = "k8s-cri"
version = "0.7.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings Kubernetes CRI"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "cri"]
repository = "https://github.com/kflansburg/k8s-cri"
documentation = "https://docs.rs/crate/k8s-cri"
readme = "README.md"

[dependencies]
tonic = { version = "0.11"}
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies.tonic-build]
version = "0.11"
default-features = false
features = ["prost", "transport"]

[dev-dependencies]
tokio = { version = "1.21", features = [ "rt-multi-thread" ] }
tower = "0.4"
