[package]
name = "k8s-cri"
version = "0.10.0"
license = "Apache-2.0"
authors = ["kflansburg <kevin.flansburg@gmail.com>"]
categories = ["api-bindings"]
description = "Bindings Kubernetes CRI"
edition = "2021"
keywords = ["client", "kubernetes", "k8s", "cri"]
repository = "https://github.com/kflansburg/k8s-cri"
documentation = "https://docs.rs/crate/k8s-cri"
readme = "README.md"

[dependencies]
tonic = { version = "0.12"}
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies.tonic-build]
version = "0.12"
default-features = false
features = ["prost", "transport"]

[dev-dependencies]
tokio = { version = "1.37", features = [ "rt-multi-thread", "macros" ] }
tower = "0.4"
hyper-util = "0.1.9"
